--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lite-server": "^2.6.1"
+    "lit-html": "^2.0.2",
+    "lite-server": "^2.6.1",
+    "page": "^1.11.6"
   }
 }
