--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "lit-html": "^2.0.2",
     "lite-server": "^2.6.1",
-    "page": "^1.11.6"
+    "page": "^1.11.6",
+    "parse": "^3.4.1"
   }
 }
